--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
     "clipboard-copy": "^4.0.1",
+    "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "i": "^0.3.7",
     "jspdf": "^2.5.1",
-    "react-scripts": "5.0.1",
     "jspdf-autotable": "^3.8.2",
     "moment": "^2.30.1",
     "npm": "^10.7.0",
@@ -25,6 +25,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-three-fiber": "^6.0.13",
     "socket.io-client": "^4.7.5",
