--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
